Completed semantic structure of all pages

--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,94 @@
                 <a href="">Contact</a>
             </nav>
     </header>
-    <!--START HERE-->
+    
+    <h1 class="centered-title">Blog</h1>
+
+    <section class="card-container">
+
+        <div class="card">
+            <img src="assets/blog1.jpg" alt="Thumbnail" class="img-thumbnail">
+            <div class="card-details">
+                <a href="">
+                    <h4>Is it time to change direction?</h4>
+                </a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="assets/blog2.jpg" alt="Thumbnail" class="img-thumbnail">
+            <div class="card-details">
+                <a href="">
+                    <h4>Planning for a healthier future</h4>
+                </a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="assets/blog3.jpg" alt="Thumbnail" class="img-thumbnail">
+            <div class="card-details">
+                <a href="">
+                    <h4>Hobbies to ease the mind</h4>
+                </a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="assets/blog4.jpg" alt="Thumbnail" class="img-thumbnail">
+            <div class="card-details">
+                <a href="">
+                    <h4>Pre-surgery diet checklist</h4>
+                </a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="assets/blog5.jpg" alt="Thumbnail" class="img-thumbnail">
+            <div class="card-details">
+                <a href="">
+                    <h4>Incremental changes to boost immune response</h4>
+                </a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="assets/blog6.jpg" alt="Thumbnail" class="img-thumbnail">
+            <div class="card-details">
+                <a href="">
+                    <h4>Eating the rainbow - in practice</h4>
+                </a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="assets/blog7.jpg" alt="Thumbnail" class="img-thumbnail">
+            <div class="card-details">
+                <a href="">
+                    <h4>Tenderstem tenderness</h4>
+                </a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="assets/blog8.jpg" alt="Thumbnail" class="img-thumbnail">
+            <div class="card-details">
+                <a href="">
+                    <h4>The versatility of kale</h4>
+                </a>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="assets/blog9.jpg" alt="Thumbnail" class="img-thumbnail">
+            <div class="card-details">
+                <a href="">
+                    <h4>Happy and healthier, for longer</h4>
+                </a>
+            </div>
+        </div>
+
+    </section>
+
     <footer>
         <a href="">Home</a>
         <a href="">Contact us</a>
