--- a/research.html
+++ b/research.html
@@ -18,6 +18,32 @@
             </nav>
     </header>
     <!--START HERE-->
+    <h1 class="centered-text">A holistic view</h1>
+
+    <p>Sed semper justo et orci laoreet posuere. Fusce pulvinar eros ac justo iaculis, eget mollis sem facilisis. Pellentesque eu vehicula libero, pharetra fermentum elit. Curabitur pharetra et sem vitae tempus. Duis at ex lectus. Quisque non erat odio. Duis scelerisque tincidunt sapien, nec elementum neque iaculis ac. Nunc tempus facilisis dolor, at gravida sapien sollicitudin at. Suspendisse id lorem est. Etiam consequat sem eu felis vulputate maximus. Suspendisse lacinia id diam ut efficitur. Cras nec ipsum tristique dui molestie semper. Donec non risus in enim maximus finibus. Quisque laoreet tempus augue id egestas. Donec orci mi, mollis a pharetra ut, condimentum sit amet massa.</p>
+
+    <p>Proin nec augue semper, hendrerit urna eu, pretium dui. Curabitur sed lacinia magna, quis egestas ipsum. Morbi non aliquet nisi. Sed et quam ipsum. Donec sit amet aliquet nibh. In interdum libero mattis mi finibus commodo. Proin accumsan nulla eget dui rutrum placerat. Ut sed ipsum elementum mauris consectetur sagittis. In non eleifend tortor, nec condimentum augue. Mauris volutpat facilisis lectus dignissim pulvinar. Donec sollicitudin purus sed scelerisque tristique.</p>
+
+    <section class="resources">
+        <ul class="resource-list">
+            <li>Foo</li>
+            <li>Bar</li>
+            <li>Baz</li>
+            <li>Foo</li>
+            <li>Bar</li>
+            <li>Baz</li>
+            <li>Foo</li>
+            <li>Bar</li>
+            <li>Baz</li>
+            <li>Foo</li>
+            <li>Bar</li>
+            <li>Baz</li>
+            <li>Foo</li>
+            <li>Bar</li>
+            <li>Baz</li>
+        </ul>
+    </section>
+
     <footer>
         <a href="">Home</a>
         <a href="">Contact us</a>
